<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inventario">
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/papeleria"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="30sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:layout_gravity="end">


        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_perfil"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            tools:ignore="ContentDescription" />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="20dp"
            app:dividerInsetEnd="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventario"
            android:textSize="50sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textSize="25sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.card.MaterialCardView

            android:clickable="true"
            android:focusable="true"
            android:checkable="true"
            android:layout_height="50dp"
            android:layout_width="350dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/agregarArticulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agregar_articulo"
                android:textSize="25sp"
                android:layout_gravity="center"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView

            android:clickable="true"
            android:focusable="true"
            android:checkable="true"
            android:layout_height="50dp"
            android:layout_width="350dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/eliminarArticulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eliminar_articulo"
                android:textSize="25sp"
                android:layout_gravity="center"/>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>